# MLOps_1

./: .env.template  .gitignore  Dockerfile  Dockerfile.predict  README.md  launch_mlflow_ui.sh  mkdocs.yaml  pyproject.toml
.github/workflows/: aws_infra.yaml  build_and_push.yaml  deploy.yaml  docs.yaml  empty_s3.yaml  images_build_and_push.yaml  main.yaml  predict.yaml  reset_s3.yaml  train.yaml  train_build_and_push.yaml  train_deploy.yaml
docs/: data_loader.md  data_processing.md  index.md  mlflow_handler.md  model_training.md  modelisation.md  mysql_handler.md  predict_pipeline.md  prediction.md  run_data_processing.md  run_download.md  run_predict.md  run_train.md  s3_handler.md  train_pipeline.md
infra/cloudformation/: ecr.yaml  ecs_cluster.yaml  ecs_task.yaml  s3_bucket.yaml
notebooks/: 1_exploration.ipynb  2_preprocessing.ipynb  3_modelisation.ipynb  4_prediction.ipynb  trials.ipynb
src/mlops_project/: predict_pipeline.py  train_pipeline.py
src/mlops_project/config/: dev.yaml  drop_tables.py  init_database.py  init_mysql_db.py  init_tables.py  loader.py  mysql_handler.py  populate_data.py  queries.sql  run_mysql.py  test_db.py
src/mlops_project/data/: fetch_data.py  run_download.py
src/mlops_project/data_retriever/: fetch_data.py  run_download.py
src/mlops_project/preprocessing/: processor.py
src/mlops_project/run/: run_data_processing.py  run_download.py  run_predict.py  run_train.py  train_model.py
src/mlops_project/utils/: data_loader.py  data_processing.py  load_csv.py  load_from_s3.py  mlflow_handler.py  model_training.py  modelisation.py  mysql_handler.py  prediction.py  s3_handler.py
