[tool.poetry]
name = "mlops_project"
version = "0.1.0"
description = "Template MLOps End-to-End avec training/predict en containers sur ECS"
authors = ["Ton Nom <ton.email@example.com>"]
readme = "README.md"
packages = [{ include = "mlops_project", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
boto3 = "^1.34.0"
requests = "^2.31.0"
scikit-learn = "^1.4.0"
mlflow = "^2.11.1"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.0"
ipykernel = "^6.29.0"
notebook = "^7.1.0"
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
